# openmp_lab

./: CMakeLists.txt  README.md  animate.py  main.cpp  run.sh  threads.py
